--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,18 @@
         </div>
         <div class="posts">
           <ul class="posts-list">
-            {% for post in site.posts %}
               <li class="post-link">
-                <a class="post-title" href="{{ post.url }}">
-                  <span class="post-date">{{ post.date | date_to_string }}</span>
-                  {{ post.title }}
+                <a class="post-title" href="http://lucif3rr.github.io/templates/pinning.html">
+                  <span class="post-date">2014-06-29</span>
+                  pinning
                 </a>
               </li>
-            {% endfor %}
+                <a class="post-title" href="http://lucif3rr.github.io/templates/pinning.html">
+                  <span class="post-date">2014-06-29</span>
+                  pinning
+                </a>
+              </li>
+          
           </ul>
         </div>
         <div class="footer">
