--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
                   pinning
                 </a>
               </li>
+              <li class="post-link">
                 <a class="post-title" href="http://lucif3rr.github.io/templates/pinning.html">
                   <span class="post-date">2014-06-29</span>
                   pinning
