--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,12 @@
         <div class="colophon">
           <ul class="colophon-links">
             <li>
-              <a href="https://github.com/mdo/hyde/archive/v{{ site.version }}.zip">Download</a>
+              <a href="https://github.com/owtf/owtf/archive/master.zip">Download</a>
             </li>
             <li>
-              <a href="https://github.com/mdo/hyde">GitHub project</a>
+              <a href="https://github.com/owtf/owtf">GitHub project</a>
             </li>
-            <li>Currently v{{ site.version }}</li>
+            <li>Currently v 0.45, Winter Blizzard</li>
           </ul>
           <p>&copy; 2014. {{ site.author.name }} All rights reserved.</p>
         </div>
